# cflask

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  components.cpp  drawing.cpp  flask_test.cpp  graph.cpp  rc22.cpp  video.cpp  widget.cpp
include/dash/: dash.hpp  database.hpp  ex_component.hpp
include/flask/: components.hpp  flask.hpp  pageconfig.hpp  pageio.hpp  sockwrapper.hpp  utils.hpp  webenum.hpp
src/dash/: component_basic_ui.cpp  component_drawer.cpp  dash.cpp  database.cpp
src/flask/: components.cpp  flask.cpp  pageconfig.cpp  pageio.cpp  sockwrapper.cpp  utils.cpp
template/: device_check.html  flask_test.html  index.html  joypad.html  multipletest.html  plotter_test.html  point_cloud.html  r2_tmp.html  test.html  upload.html
template/public/css/: controller.css  message.css
template/public/js/: controller.js  dash.js  joypad.js  message.js  myplot.js
template/rc22/: config.html  index.html  joypad.html  power.html  visualizer.html
